argocd/infra/victoriametrics/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.beutra.fr
      secretName: grafana-tls
  rules:
    - host: grafana.beutra.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoriametrics-grafana
                port:
                  number: 80
